--- a/todo_list/app/views/tasks/index.html.erb
+++ b/todo_list/app/views/tasks/index.html.erb
@@ -11,11 +11,11 @@
 <% @tasks.each do |task| %>
   <tr>
     <td><%= link_to task.title, task %></td>
-    <td><%= button_to 'Completed!' task, method: :delete, data: {confirm: 'Are you sure?'} %></td> 
+    <td><%= button_to 'Finished!' task, method: :delete, data: {confirm: 'You sure?'} %></td> 
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'Add a new task?', new_topic_path %>
+<%= link_to 'Add another?', new_topic_path %>
